--- a/cart.html
+++ b/cart.html
@@ -192,14 +192,14 @@
        <hr class="w-100  me-5">
           <div class="row align-items-start">
             <div class="col-12 col-sm-8 items">
-              <div class="cartItem row align-items-start">
+              <div class="cartItem row align-items-start" id="cartItem">
                 <div class="col-3 mb-2">
                   <img class="w-100" src="/assets/img/II Crew Sweatshirt.webp" alt="art image">
                 </div>
                 <div class="col-3 mb-2">
                   <h6 class="">Sweatshirt</h6>
                   <p class="pl-1 mb-0">Size: S</p>
-                  <a href="#" class="text-danger ">Remove</a>
+                  <a href="#" class="text-danger" id="remove-btn">Remove</a>
                 </div>
                 <div class="col-2">
                     <p id="cartItem1Price">$66</p>
@@ -223,14 +223,14 @@
                 </div>
               </div>
               <hr>
-              <div class="cartItem row align-items-start">
+              <div class="cartItem row align-items-start" id="cartItem">
                 <div class="col-3 mb-2">
-                  <img class="w-100" src="/assets/img/II Crew Sweatshirt.webp" alt="art image">
+                  <img class="w-100" src="/assets/img/Down Hooded Jacket(product3).webp" alt="art image">
                 </div>
                 <div class="col-3 mb-2">
                   <h6 class="">Sweatshirt</h6>
                   <p class="pl-1 mb-0">Size: S</p>
-                  <a href="#" class="text-danger ">Remove</a>
+                  <a href="#" class="text-danger">Remove</a>
                 </div>
                 <div class="col-2">
                     <p id="cartItem1Price">$66</p>
